# spice-ai-assessment

./: .gitignore  Cargo.toml  README.md  spicepod.yaml
src/: errors.rs  lib.rs  main.rs  types.rs
src/ai/: embeddings.rs  mod.rs  open_ai.rs
src/database/: mod.rs  scores.rs  user.rs  utils.rs
src/models/: mod.rs  scores.rs  user.rs
src/routes/: scores.rs  user.rs
