[package]
name = "spice-ai-assessment"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
reqwest= {version = "0.12.8", features = ["default", "json"]}
dotenv = "0.15.0"
spiceai = "2.0.0"
async-openai = "0.25.0"